增加案例和調整gitignore